--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,8 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.12.3",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "expo-checkbox": "~3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
